examples/errors/alias_holes.stlc
A : Type
A = List _
